# HMM

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: Lorenz_rho_28.0_sigma_10.0_beta_2.6666666666666665_x_0.1_y_0.1_z_0.1_h_0.01_method_DOP853_rtol_0_atol_[0. 0. 0.]_n_10000.npy
docs/source/: attractor_analysis.analysis.rst  attractor_analysis.profiling_compile.rst  attractor_analysis.rst  attractor_analysis.utils.rst  bash.rst  conf.py  data.rst  experiments.rst  index.rst  logs.rst  modules.rst  scripts.rst  test_slds_analyzer.rst
experiments/: config.yaml  config_numba.yaml  config_optimized_no_numba.yaml
scripts/: run.py
shell/: README.md  update_docs.sh
src/attractor_analysis/: __init__.py  analysis.py  profiling_compile.py  utils.py
test/: test_slds_analyzer.py  test_utils.py
