# Choosing a build backend:
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "attractor_analysis"
version = "0.0.1"
description = "devtools_scicomp"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "E B", email = "winnfieldj@yahoo.com" }]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "test", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "codecov"
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
    "sphinx-autoapi>=2.0"
]
all = [
    "pytest",
    "pytest-cov",
    "codecov",
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
    "sphinx-autoapi>=2.0"
]
