# Choosing a build backend:
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "attractor_analysis"
version = "0.0.1"
description = "devtools_scicomp"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "E B", email = "winnfieldj@yahoo.com" }]
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "test", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "codecov"
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autoapi"
]
all = [
    "pytest",
    "pytest-cov",
    "codecov",
    "sphinx>=5.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-autoapi"
]
